--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
-	<classpathentry kind="lib" path="C:/Users/Damian/Desktop/GFT_4/exercise_4b/gradle/javax.jms.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Damian/Desktop/GFT_4/exercise_4b/gradle/apache-activemq-4.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Damian/Desktop/GFT_4/exercise_4b/gradle/slf4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
